--- a/src/com/oic/plugin/multidimens/ui/window/FormMain.form
+++ b/src/com/oic/plugin/multidimens/ui/window/FormMain.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="1" left="1" bottom="1" right="1"/>
     <constraints>
-      <xy x="20" y="20" width="635" height="652"/>
+      <xy x="20" y="20" width="618" height="668"/>
     </constraints>
     <properties>
       <background color="-1447447"/>
@@ -12,18 +12,20 @@
     <clientProperties>
       <html.disable class="java.lang.Boolean" value="true"/>
     </clientProperties>
-    <border type="line"/>
+    <border type="none"/>
     <children>
-      <splitpane id="dbb53">
+      <splitpane id="dbb53" binding="splitPane">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="500"/>
           </grid>
         </constraints>
         <properties>
-          <dividerSize value="4"/>
+          <dividerSize value="2"/>
+          <enabled value="true"/>
+          <resizeWeight value="0.5"/>
         </properties>
-        <border type="none"/>
+        <border type="empty"/>
         <children>
           <grid id="647f6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
@@ -31,19 +33,20 @@
               <splitpane position="left"/>
             </constraints>
             <properties/>
-            <border type="none" title="Values"/>
+            <border type="empty" title="Values"/>
             <children>
               <scrollpane id="ef739">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
-                <border type="none"/>
+                <border type="etched"/>
                 <children>
                   <component id="31d84" class="javax.swing.JTree" binding="treeValues">
                     <constraints/>
                     <properties>
-                      <editable value="true"/>
+                      <editable value="false"/>
+                      <showsRootHandles value="true"/>
                     </properties>
                     <clientProperties>
                       <JTree.lineStyle class="java.lang.String" value=""/>
@@ -59,18 +62,21 @@
               <splitpane position="right"/>
             </constraints>
             <properties/>
-            <border type="none" title="Content"/>
+            <border type="empty" title="Content"/>
             <children>
               <scrollpane id="90112">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
-                <border type="none"/>
+                <properties>
+                  <background color="-1250068"/>
+                </properties>
+                <border type="etched"/>
                 <children>
                   <component id="8313a" class="javax.swing.JTextPane" binding="textContent">
                     <constraints/>
                     <properties>
+                      <background color="-1"/>
                       <font size="12"/>
                       <text value="&lt;?xml version=&quot;1.0&quot; encoding=&quot;utf-8&quot;?&gt; &#10;&lt;resources&gt;      &#10;    &lt;!-- text in app --&gt;     &#10;    &lt;dimen name=&quot;text_size_space_small&quot;&gt;6sp&lt;/dimen&gt;     &#10;    &lt;dimen name=&quot;text_size_tiny&quot;&gt;10sp&lt;/dimen&gt;     &#10;    &lt;dimen name=&quot;text_size_tiny1&quot;&gt;11sp&lt;/dimen&gt;     &#10;    &lt;dimen name=&quot;text_size_small&quot;&gt;12sp&lt;/dimen&gt;     &#10;    &lt;dimen name=&quot;text_size_small2&quot;&gt;13sp&lt;/dimen&gt;     &#10;    &lt;dimen name=&quot;text_size_small1&quot;&gt;13.5sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_default&quot;&gt;14sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_default1&quot;&gt;15sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_normal&quot;&gt;16sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_normal1&quot;&gt;17sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_large&quot;&gt;18sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_large1&quot;&gt;19sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_xlarge&quot;&gt;20sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_xxlarge&quot;&gt;22sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_xxxlarge&quot;&gt;24sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_xxxxlarge&quot;&gt;26sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_xxxxlarge3&quot;&gt;27sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_xxxxlarge1&quot;&gt;29sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;text_size_xxxxlarge2&quot;&gt;34sp&lt;/dimen&gt;      &#10;&lt;dimen name=&quot;line_space_small&quot;&gt;2dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;line_space_normal&quot;&gt;4dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;line_space_normal1&quot;&gt;6dp&lt;/dimen&gt;      &#10;&lt;dimen name=&quot;line_height_small&quot;&gt;4sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;line_height_small1&quot;&gt;5.625sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;line_height_small2&quot;&gt;6.75sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;line_height_default1&quot;&gt;9sp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;line_height_normal&quot;&gt;16sp&lt;/dimen&gt;      &#10;&#10;&lt;!-- padding in app --&gt;     &#10;&lt;dimen name=&quot;padding_nano&quot;&gt;0.5dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_micro&quot;&gt;2dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_tiny&quot;&gt;4dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_tiny1&quot;&gt;5dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_small&quot;&gt;8dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_small_extra&quot;&gt;10dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_small_extra1&quot;&gt;11dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_small_extra2&quot;&gt;13dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_small1&quot;&gt;14dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_default&quot;&gt;16dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_default_extra&quot;&gt;18dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_default_extra1&quot;&gt;20dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_default_extra2&quot;&gt;22dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_normal&quot;&gt;24dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_normal1&quot;&gt;27dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_large&quot;&gt;32dp&lt;/dimen&gt;     &#10;&lt;dimen name=&quot;padding_large1&quot;&gt;36dp&lt;/dimen&gt;    &#10;&lt;dimen name=&quot;size_xxlarge2&quot;&gt;180dp&lt;/dimen&gt;  &#10;&lt;/resources&gt;"/>
                     </properties>
@@ -84,9 +90,11 @@
           </grid>
         </children>
       </splitpane>
-      <grid id="6d3d1" layout-manager="FlowLayout" hgap="0" vgap="0" flow-align="1">
+      <grid id="6d3d1" layout-manager="FlowLayout" hgap="0" vgap="0" flow-align="2">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="6" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="6" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="500" height="27"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -95,6 +103,25 @@
             <constraints/>
             <properties>
               <text value="Export"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+      <grid id="e9cd5" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="5" bottom="0" right="0"/>
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="2a96a" class="javax.swing.JLabel" binding="textHelp">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="10"/>
+              <text value="Select a file to see generated dimens"/>
             </properties>
           </component>
         </children>
