--- a/src/com/oic/plugin/multidimens/ui/window/FormMain.form
+++ b/src/com/oic/plugin/multidimens/ui/window/FormMain.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="2" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="1" left="1" bottom="1" right="1"/>
     <constraints>
-      <xy x="20" y="20" width="618" height="668"/>
+      <xy x="20" y="20" width="776" height="668"/>
     </constraints>
     <properties>
       <background color="-1447447"/>
@@ -46,6 +46,7 @@
                     <constraints/>
                     <properties>
                       <editable value="false"/>
+                      <enabled value="true"/>
                       <showsRootHandles value="true"/>
                     </properties>
                     <clientProperties>
